--- a/index.html
+++ b/index.html
@@ -19,21 +19,59 @@
 
 		gtag('config', 'UA-146647335-1');
 	</script>
-	<title> Coming Soon </title>
+	<title> CSE 7 th sem | Computer Science & Engineering | VTU | 7 Sem | 17 Scheme | Future Vision BIE | FVBIE </title>
 	<meta name="google-site-verification" content="google0186c8ef8f3bf22a.html">
 	<meta name="google-site-verification" content="googlead12f4cfae702c06.html">
 	<!-- indexing -->
-	<meta name="description" content="Paid Internship for Students on Merits Basis>
+	<meta name="description" content="Home Page for the Study Materials of 7th Sem CSE, Find PDF's, Important Questions(Question Bank), Answer Script (Solution for the Important Questions)">
 
-	<meta name=" keywords"
-		content="Future Visiob BIE,fvbie,future,vision,Future Vision,hemanth raj,
+	<meta name=" keywords" content="Future Vision BIE,fvbie,future,vision,Future Vision,hemanth raj,
+	7 sem, cse, 7 cse, 7th sem cse, 7 sem notes, 4th year notes,
+	17CS71, 17CS72, 17CS73, 17CS741, 17CS742, 17CS743, 17CS744, 17CS751, 17CS752, 17CS753, 17CS754, 17CSL76, 17CSL77, 17CSP78,
+	17CS71 Notes,17CS72 Notes,17CS73 Notes,17CS741 Notes,17CS742 Notes,17CS743 Notes,17CS744 Notes,17CS751 Notes,17CS752 Notes,
+	17CS753 Notes,17CS754 Notes,17CSL76 Notes,17CSL77 Notes,17CSP78 Notes,
+	17CS71 question paper, 17CS72 question paper, 17CS73 question paper, 17CS741 question paper, 17CS742 question paper, 
+	17CS743 question paper, 17CS744 question paper, 17CS751 question paper, 17CS752 question paper, 17CS753 question paper, 
+	17CS754 question paper, 17CSL76 question paper, 17CSL77 question paper, 17CSP78 question paper, 
+	17CS71 Answer Script, 17CS72 Answer Script, 17CS73 Answer Script, 17CS741 Answer Script, 17CS742 Answer Script, 
+	17CS743 Answer Script, 17CS744 Answer Script, 17CS751 Answer Script, 17CS752 Answer Script, 17CS753 Answer Script, 
+	17CS754 Answer Script, 17CSL76 Answer Script, 17CSL77 Answer Script, 17CSP78 Answer Script, 
+	17CS71 Text Book, 17CS72 Text Book, 17CS73 Text Book, 17CS741 Text Book, 17CS742 Text Book, 17CS743 Text Book, 
+	17CS744 Text Book, 17CS751 Text Book, 17CS752 Text Book, 17CS753 Text Book, 17CS754 Text Book, 17CSL76 Text Book, 
+	17CSL77 Text Book, 17CSP78 Text Book, 17CS71 Solved Papers, 17CS72 Solved Papers, 17CS73 Solved Papers, 
+	17CS741 Solved Papers, 17CS742 Solved Papers, 17CS743 Solved Papers, 17CS744 Solved Papers, 17CS751 Solved Papers, 
+	17CS752 Solved Papers, 17CS753 Solved Papers, 17CS754 Solved Papers, 17CSL76 Solved Papers, 17CSL77 Solved Papers, 
+	17CSP78 Solved Papers, Natural Language Processing, NLP, Cloud Computing and its Applications, CCA, 
+	Information and Network Security, INS, Unix System Programming, USP, Soft and Evolutionary Computing, SEC, 
+	Computer Vision and Robotics, CVR, Digital Image Processing, DIP, Storage Area Networks, SAN, 
+	Machine Learning Laboratory, ML Lab, Web Technology Laboratory with mini project , WTA Lab, 
+	Project Work Phase–I + Project work Seminar, Project, Natural Language Processing Notes, NLP Notes, 
+	Cloud Computing and its Applications Notes, CCA Notes, Information and Network Security Notes, INS Notes, 
+	Unix System Programming Notes, USP Notes, Soft and Evolutionary Computing Notes, SEC Notes, 
+	Computer Vision and Robotics Notes, CVR Notes, Digital Image Processing Notes, DIP Notes, Storage Area Networks Notes, 
+	SAN Notes, Machine Learning Laboratory Notes, ML Lab Notes, Web Technology Laboratory with mini project Notes, 
+	WTA Lab Notes, Project Work Phase–I + Project work Seminar Notes, Project Notes, Natural Language Processing Text Book,
+	 NLP Text Book, Cloud Computing and its Applications Text Book, CCA Text Book, Information and Network Security Text Book,
+	 INS Text Book, Unix System Programming Text Book, USP Text Book, Soft and Evolutionary Computing Text Book, 
+	 SEC Text Book, Computer Vision and Robotics Text Book, CVR Text Book, Digital Image Processing Text Book, 
+	 DIP Text Book, Storage Area Networks Text Book, SAN Text Book, Machine Learning Laboratory Text Book, 
+	 ML Lab Text Book, Web Technology Laboratory with mini project Text Book, WTA Lab Text Book, 
+	Project Work Phase–I + Project work Seminar Text Book, Project Text Book, 
+	 Natural Language Processing solved Question Paper, NLP solved Question Paper, Cloud Computing and its Applications solved Question Paper,
+	 CCA solved Question Paper, Information and Network Security solved Question Paper, INS solved Question Paper, 
+	 Unix System Programming solved Question Paper, USP solved Question Paper, Soft and Evolutionary Computing solved Question Paper, 
+	 SEC solved Question Paper, Computer Vision and Robotics solved Question Paper, CVR solved Question Paper, 
+	 Digital Image Processing solved Question Paper, DIP solved Question Paper, Storage Area Networks solved Question Paper, 
+	 SAN solved Question Paper, Machine Learning Laboratory solved Question Paper, ML Lab solved Question Paper, 
+	 Web Technology Laboratory with mini project solved Question Paper, WTA Lab solved Question Paper, 
+	 Project Work Phase–I + Project work Seminar solved Question Paper, Project, 
 	" />
 	<meta name="author" content="K B HEMANTH RAJ">
 
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-	<link rel="stylesheet" href="https://hemanthrajhemu.github.io/new.css">
-	<script src="https://hemanthrajhemu.github.io/new.js">        </script>
+	<link rel="stylesheet" href="https://hemanthrajhemu.github.io/DB/new.css">
+	<script src="https://hemanthrajhemu.github.io/DB/new.js">        </script>
 
 </head>
 
@@ -126,7 +164,7 @@
 				</div>
 
 			</div>
-
+			<a href="https://hemanthrajhemu.github.io/ACCOUNT/" style="float:right;">Account</a>
 			<a href="https://hemanthrajhemu.github.io/FutureVisionBIE/contact.html" style="float:right;">Contact</a>
 			<a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="NavClose1()">&#9776;</a>
 		</div>
@@ -142,7 +180,7 @@
 			<a href="https://hemanthrajhemu.github.io/FutureVisionBIE/disclaimer.html">Disclaimer</a>
 			<a href="https://hemanthrajhemu.github.io/privacy-policy.html">Privacy Policy</a>
 
-
+			<a href="https://hemanthrajhemu.github.io/ACCOUNT/" style="float:right;">Account</a>
 			<a href="https://hemanthrajhemu.github.io/FutureVisionBIE/contact.html">CONTACT</a>
 			<a href="https://hemanthrajhemu.github.io/">HOME</a>
 		</div>
@@ -151,6 +189,241 @@
 
 
 
+			<div class="desp">
+
+				<p>
+				<h1>Home Page for the Study Materials of 7<sup>th</sup> Sem CSE, Find PDF's, Important
+					Questions(Question Bank), Answer Script (Solution for the Important Questions) </h1>
+				</p>
+
+			</div>
+			<br />
+			<br />
+
+			<!-- inArticle ad-->
+			<div class="ads" id="ads">
+				<center>Advertisement<br />
+					<input type="hidden" name="IL_IN_ARTICLE">
+				</center>
+			</div>
+
+
+			<!-- trying now--->
+			<div class=sem>
+
+				<p>
+				<h1>7<sup>th</sup> Semester - Core Subjects</h1>
+				</p>
+				<div class="sem1">
+
+					<div class="lii"><a href="https://hemanthrajhemu.github.io/CSE7/17SCHEME/17CS71/"> 17CS71 - Web
+							Technology and its applications </a>
+					</div>
+					<div class="lii"><a href="https://hemanthrajhemu.github.io/CSE7/17SCHEME/17CS72/"> 17CS72 - Advanced
+							Computer Architectures </a>
+					</div>
+					<div class="lii"><a href="https://hemanthrajhemu.github.io/CSE7/17SCHEME/17CS73/"> 17CS73 - Machine
+							Learning - (Coming Soon)</a>
+					</div>
+
+
+				</div>
+			</div>
+			<hr />
+
+
+			<div class="alertA1">
+				<span class="closebtnA1" onclick="this.parentElement.style.display='none';">&times;</span>
+				<strong>NOTE!</strong>
+				<strong id="NOTEID1">Note Most of the Materials will be made available in this week.</strong>
+			</div>
+
+			<!-- trying now--->
+			<div class=sem>
+
+				<p>
+				<h1>7<sup>th</sup> Semester - Professional Elective-3</h1>
+				</p>
+				<div class="sem1">
+
+					<div class="lii"><a href="https://hemanthrajhemu.github.io/CSE7/17SCHEME/17CS741/"> 17CS741 -
+							Natural Language Processing - (Coming Soon) </a>
+					</div>
+					<div class="lii"><a href="https://hemanthrajhemu.github.io/CSE7/17SCHEME/17CS742/"> 17CS742 - Cloud
+							Computing and its Applications - (Coming Soon)</a>
+					</div>
+					<div class="lii"><a href="https://hemanthrajhemu.github.io/CSE7/17SCHEME/17CS743/"> 17CS743 -
+							Information and Network Security - (Coming Soon)</a>
+					</div>
+					<div class="lii"><a href="https://hemanthrajhemu.github.io/CSE7/17SCHEME/17CS744/"> 17CS744 - Unix
+							System Programming - (Coming Soon)</a>
+					</div>
+
+
+				</div>
+			</div>
+			<hr />
+
+
+			<!-- inTag ad-->
+			<div class="ads" id="ads">
+				<center>Advertisement<br />
+					<input type="hidden" name="IL_IN_TAG" value="2" />
+				</center>
+			</div>
+
+			<!-- trying now--->
+			<div class=sem>
+
+				<p>
+				<h1>7<sup>th</sup> Semester - Professional Elective-4</h1>
+				</p>
+				<div class="sem1">
+
+					<div class="lii"><a href="https://hemanthrajhemu.github.io/CSE7/17SCHEME/17CS751/"> 17CS751 - Soft
+							and Evolutionary Computing - (Coming Soon)</a>
+					</div>
+					<div class="lii"><a href="https://hemanthrajhemu.github.io/CSE7/17SCHEME/17CS752/"> 17CS752 -
+							Computer Vision and Robotics - (Coming Soon) </a>
+					</div>
+					<div class="lii"><a href="https://hemanthrajhemu.github.io/CSE7/17SCHEME/17CS753/"> 17CS753 -
+							Digital Image Processing - (Coming Soon)</a>
+					</div>
+					<div class="lii"><a href="https://hemanthrajhemu.github.io/CSE7/17SCHEME/17CS754/"> 17CS754 -
+							Storage Area Networks - (Coming Soon)</a>
+					</div>
+
+				</div>
+			</div>
+			<hr />
+
+
+			<!-- inTag ad-->
+			<div class="ads" id="ads">
+				<center>Advertisement<br />
+					<input type="hidden" name="IL_IN_TAG" value="2" />
+				</center>
+			</div>
+			<!-- trying now--->
+			<div class=sem>
+
+				<p>
+				<h1>7<sup>th</sup> Semester - Lab & Projects</h1>
+				</p>
+				<div class="sem1">
+
+					<div class="lii"><a href="https://hemanthrajhemu.github.io/CSE7/17SCHEME/17CSL76/"> 17CSL76 -
+							Machine Learning Laboratory - (Coming Soon)</a>
+					</div>
+					<div class="lii"><a href="https://hemanthrajhemu.github.io/CSE7/17SCHEME/17CSL77/"> 17CSL77 - Web
+							Technology Laboratory with mini project - (Coming Soon)</a>
+					</div>
+					<div class="lii"><a href="https://hemanthrajhemu.github.io/CSE7/17SCHEME/17CSP78/"> 17CSP78 -
+							Project Work Phase–I + Project work Seminar - (Coming Soon)</a>
+					</div>
+
+				</div>
+			</div>
+			<hr />
+
+
+			<!-- inTag ad-->
+			<div class="ads" id="ads">
+				<center>Advertisement<br />
+					<input type="hidden" name="IL_IN_TAG" value="2" />
+				</center>
+			</div>
+
+			<div class="desp">
+
+				<p>
+				<H1>lIKE OUR CONTENT SUPPORT US BY FOLLOWING US ON INSTAGRAM : <a
+						href="https://www.instagram.com/futurevisionbie/">@futurevisionbie</a></H1>
+				<h1>Latest Updates are also posted in instagram as Stories...</h1>
+				<h1>For immediate Notification Join the <a
+						href="https://telegram.me/joinchat/AAAAAFTtp8kuvCHALxuMaQ">Telegram Channel</a></h1>
+				</p>
+
+			</div>
+			<br />
+			<br />
+
+
+			<div class="desp">
+
+				<p>
+					<center><big>
+							<h1>7<sup>th</sup> Core Subject </h1>
+						</big></center>
+				<h1><span style='font-size:20px;'>&#9635;</span> 17CS71 - Web Technology and its applications - WTA
+				</h1>
+				<h1><span style='font-size:20px;'>&#9635;</span> 17CS72 - Advanced Computer Architectures - ACA </h1>
+				<h1><span style='font-size:20px;'>&#9635;</span> 17CS73 - Machine Learning - ML </h1>
+
+				</p>
+
+			</div>
+			<br />
+			<br />
+
+
+			<div class="desp">
+
+				<p>
+					<center><big>
+							<h1>7<sup>th</sup> Professional Elective - 3 </h1>
+						</big></center>
+				<h1><span style='font-size:20px;'>&#9635;</span> 17CS741 - Natural Language Processing - NLP</h1>
+				<h1><span style='font-size:20px;'>&#9635;</span> 17CS742 - Cloud Computing and its Applications - CCA
+				</h1>
+				<h1><span style='font-size:20px;'>&#9635;</span> 17CS743 - Information and Network Security - INS</h1>
+				<h1><span style='font-size:20px;'>&#9635;</span> 17CS744 - Unix System Programming - USP</h1>
+
+				</p>
+
+			</div>
+			<br />
+			<br />
+
+
+
+			<div class="desp">
+
+				<p>
+					<center><big>
+							<h1>7<sup>th</sup>Professional Elective - 4 </h1>
+						</big></center>
+				<h1><span style='font-size:20px;'>&#9635;</span>17CS751 - Soft and Evolutionary Computing - SEC </h1>
+				<h1><span style='font-size:20px;'>&#9635;</span>17CS752 - Computer Vision and Robotics - CVR </h1>
+				<h1><span style='font-size:20px;'>&#9635;</span> 17CS753 - Digital Image Processing - DIP</h1>
+				<h1><span style='font-size:20px;'>&#9635;</span>17CS754 - Storage Area Networks - SAN </h1>
+
+				</p>
+
+			</div>
+			<br />
+			<br />
+
+
+
+			<div class="desp">
+
+				<p>
+					<center><big>
+							<h1>7<sup>th</sup> Lab & Project </h1>
+						</big></center>
+				<h1><span style='font-size:20px;'>&#9635;</span>17CSL76 - Machine Learning Laboratory - ML Lab </h1>
+				<h1><span style='font-size:20px;'>&#9635;</span>17CSL77 - Web Technology Laboratory with mini project -
+					WTA Lab </h1>
+				<h1><span style='font-size:20px;'>&#9635;</span>17CSP78 - Project Work Phase–I + Project work Seminar -
+					Project
+				</h1>
+
+				</p>
+
+			</div>
+			<br />
+			<br />
 
 
 			<!-- trying now
@@ -171,20 +444,6 @@
 				</div>
 			</div>-->
 
-
-			<div class="desp">
-
-				<p>
-				<h1>
-					<big>Coming Soon</big> We will be constantly updating the STUDY MATERIALS with in this Week.</h1>
-				</p>
-
-			</div>
-			<br />
-			<div class="desp">
-				<p><h1><big>Follow our Instagram Page & Telegram Channel to get instant Notification.</big></h1></p>
-				<p><h1>-Admin</h1></p>
-			</div>
 
 			<!--Alert
 			<div class="alertA1">
